{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 79,
  "lineage": "a271526f-5c49-b45f-1023-30e4ba9e38fc",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsgs",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "App",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ca97a08a-9992-4573-9009-1b048ef26759/resourceGroups/azure-n-tier/providers/Microsoft.Network/networkSecurityGroups/App",
            "location": "australiaeast",
            "name": "App",
            "resource_group_name": "azure-n-tier",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_Port80_Inbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Development"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "DB",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ca97a08a-9992-4573-9009-1b048ef26759/resourceGroups/azure-n-tier/providers/Microsoft.Network/networkSecurityGroups/DB",
            "location": "australiaeast",
            "name": "DB",
            "resource_group_name": "azure-n-tier",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_Port80_Inbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Development"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "Web",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ca97a08a-9992-4573-9009-1b048ef26759/resourceGroups/azure-n-tier/providers/Microsoft.Network/networkSecurityGroups/Web",
            "location": "australiaeast",
            "name": "Web",
            "resource_group_name": "azure-n-tier",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_Port80_Inbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Development"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_allow_appgw_http_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "",
            "destination_port_ranges": [
              "443",
              "80"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/ca97a08a-9992-4573-9009-1b048ef26759/resourceGroups/azure-n-tier/providers/Microsoft.Network/networkSecurityGroups/Web/securityRules/Allow-AppGw-HTTP-HTTPS",
            "name": "Allow-AppGw-HTTP-HTTPS",
            "network_security_group_name": "Web",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "azure-n-tier",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "10.100.5.0/24"
            ],
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsgs",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.100.5.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ca97a08a-9992-4573-9009-1b048ef26759/resourceGroups/azure-n-tier/providers/Microsoft.Network/virtualNetworks/cloud-engg-project1/subnets/App-GW",
            "name": "App-GW",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "azure-n-tier",
            "virtual_network_name": "cloud-engg-project1"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "App",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.100.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ca97a08a-9992-4573-9009-1b048ef26759/resourceGroups/azure-n-tier/providers/Microsoft.Network/virtualNetworks/cloud-engg-project1/subnets/App",
            "name": "App",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "azure-n-tier",
            "virtual_network_name": "cloud-engg-project1"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "DB",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.100.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ca97a08a-9992-4573-9009-1b048ef26759/resourceGroups/azure-n-tier/providers/Microsoft.Network/virtualNetworks/cloud-engg-project1/subnets/DB",
            "name": "DB",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "azure-n-tier",
            "virtual_network_name": "cloud-engg-project1"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "Web",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.100.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ca97a08a-9992-4573-9009-1b048ef26759/resourceGroups/azure-n-tier/providers/Microsoft.Network/virtualNetworks/cloud-engg-project1/subnets/Web",
            "name": "Web",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "azure-n-tier",
            "virtual_network_name": "cloud-engg-project1"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "App",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ca97a08a-9992-4573-9009-1b048ef26759/resourceGroups/azure-n-tier/providers/Microsoft.Network/virtualNetworks/cloud-engg-project1/subnets/App",
            "network_security_group_id": "/subscriptions/ca97a08a-9992-4573-9009-1b048ef26759/resourceGroups/azure-n-tier/providers/Microsoft.Network/networkSecurityGroups/App",
            "subnet_id": "/subscriptions/ca97a08a-9992-4573-9009-1b048ef26759/resourceGroups/azure-n-tier/providers/Microsoft.Network/virtualNetworks/cloud-engg-project1/subnets/App"
          },
          "dependencies": [
            "azurerm_network_security_group.nsgs",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnets",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "DB",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ca97a08a-9992-4573-9009-1b048ef26759/resourceGroups/azure-n-tier/providers/Microsoft.Network/virtualNetworks/cloud-engg-project1/subnets/DB",
            "network_security_group_id": "/subscriptions/ca97a08a-9992-4573-9009-1b048ef26759/resourceGroups/azure-n-tier/providers/Microsoft.Network/networkSecurityGroups/DB",
            "subnet_id": "/subscriptions/ca97a08a-9992-4573-9009-1b048ef26759/resourceGroups/azure-n-tier/providers/Microsoft.Network/virtualNetworks/cloud-engg-project1/subnets/DB"
          },
          "dependencies": [
            "azurerm_network_security_group.nsgs",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnets",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "Web",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ca97a08a-9992-4573-9009-1b048ef26759/resourceGroups/azure-n-tier/providers/Microsoft.Network/virtualNetworks/cloud-engg-project1/subnets/Web",
            "network_security_group_id": "/subscriptions/ca97a08a-9992-4573-9009-1b048ef26759/resourceGroups/azure-n-tier/providers/Microsoft.Network/networkSecurityGroups/Web",
            "subnet_id": "/subscriptions/ca97a08a-9992-4573-9009-1b048ef26759/resourceGroups/azure-n-tier/providers/Microsoft.Network/virtualNetworks/cloud-engg-project1/subnets/Web"
          },
          "dependencies": [
            "azurerm_network_security_group.nsgs",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnets",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.100.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "8e254dce-c591-438e-b306-ee0e4fa66f25",
            "id": "/subscriptions/ca97a08a-9992-4573-9009-1b048ef26759/resourceGroups/azure-n-tier/providers/Microsoft.Network/virtualNetworks/cloud-engg-project1",
            "location": "australiaeast",
            "name": "cloud-engg-project1",
            "resource_group_name": "azure-n-tier",
            "subnet": [
              {
                "address_prefix": "10.100.0.0/24",
                "id": "/subscriptions/ca97a08a-9992-4573-9009-1b048ef26759/resourceGroups/azure-n-tier/providers/Microsoft.Network/virtualNetworks/cloud-engg-project1/subnets/Web",
                "name": "Web",
                "security_group": "/subscriptions/ca97a08a-9992-4573-9009-1b048ef26759/resourceGroups/azure-n-tier/providers/Microsoft.Network/networkSecurityGroups/Web"
              },
              {
                "address_prefix": "10.100.1.0/24",
                "id": "/subscriptions/ca97a08a-9992-4573-9009-1b048ef26759/resourceGroups/azure-n-tier/providers/Microsoft.Network/virtualNetworks/cloud-engg-project1/subnets/App",
                "name": "App",
                "security_group": "/subscriptions/ca97a08a-9992-4573-9009-1b048ef26759/resourceGroups/azure-n-tier/providers/Microsoft.Network/networkSecurityGroups/App"
              },
              {
                "address_prefix": "10.100.2.0/24",
                "id": "/subscriptions/ca97a08a-9992-4573-9009-1b048ef26759/resourceGroups/azure-n-tier/providers/Microsoft.Network/virtualNetworks/cloud-engg-project1/subnets/DB",
                "name": "DB",
                "security_group": "/subscriptions/ca97a08a-9992-4573-9009-1b048ef26759/resourceGroups/azure-n-tier/providers/Microsoft.Network/networkSecurityGroups/DB"
              },
              {
                "address_prefix": "10.100.5.0/24",
                "id": "/subscriptions/ca97a08a-9992-4573-9009-1b048ef26759/resourceGroups/azure-n-tier/providers/Microsoft.Network/virtualNetworks/cloud-engg-project1/subnets/App-GW",
                "name": "App-GW"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}